# arxiv_rag_system

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
data/processed/: eval_baseline.json  papers_metadata.json  qa_dataset.json
docs/: embedding_model_debugging.md  finetuning_experiment.md  retrieval_optimisation.md  weekly_log.md
src/api/: main.py
src/api/core/: chunker.py  config.py  hybrid_retriever.py  llm_client.py  rag_chain.py  retriever.py
src/api/models/: schemas.py
src/api/routers/: health.py  query.py
src/evaluation/: eval_dataset.py  evaluate.py
src/finetuning/: finetune_lora.ipynb  generate_qa_dataset.py  lora_finetuning.ipynb  qwen3_qlora_finetuning.ipynb
src/ingestion/: arxiv_crawler.py  indexer.py  pdf_parser.py
ui/: app.py
