[project]
name = "arxiv-rag-system"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    
    # RAG
    "chromadb>=0.5.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0.0",
    
    # Data collection / processing
    "arxiv>=2.1.0",
    "pymupdf>=1.24.0",
    "pymupdf4llm>=0.0.5",
    
    # UI
    "streamlit>=1.38.0",
    "httpx>=0.27.0",
    
    # Fine-tuning (Week 3)
    "transformers>=4.44.0",
    "peft>=0.12.0",
    "bitsandbytes>=0.43.0",
    "datasets>=2.20.0",
    "trl>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "pre-commit>=3.8.0",
]